@@ -5,7 +5,7 @@
 ## Contact: <louis-noel.pouchet@inria.fr>
 ##
 ## Started on  Tue Apr 14 17:43:47 2009 Louis-Noel Pouchet
-## Last update Wed May 18 02:26:39 2011 Louis-Noel Pouchet
+## Last update Wed May 18 03:15:04 2011 Louis-Noel Pouchet
 ##
 #
 # pocc-util.in: this file is part of the PoCC project.
@@ -133,7 +133,7 @@ sub parse_args
 		    system("cd $BASEDIR && svn up --username lppcc --password lppcc");
 		}
 		else {
-		    system("rsync -az http://www.cse.ohio-state.edu/~pouchet/software/pocc/download/released $BASEDIR");
+		    system("rsync -az http://www.cse.ohio-state.edu/~pouchet/software/pocc/download/released/ $BASEDIR/");
 		}
 		$curmode = "stable" if ($curmode =~ "local");
 		alternate($BASEDIR, $curmode);
